# evil_neko

implant/: Cargo.toml
implant/src/: main.rs
lib/: Cargo.toml  dev.ps1
lib/.cargo/: config.toml
lib/proc-macro/: Cargo.toml
lib/proc-macro/include/: Cargo.toml
lib/proc-macro/include/src/: lib.rs
lib/proc-macro/low_entropy/: ad.json  alarm-clock-minus.json  alarm-clock.json  align-center-vertical.json  apple.json  book-open-check.json  brush.json  calendar-1.json  calendar-arrow-up.json  calendar-check.json  calendar-x-2.json  circle-slash-2.json  disc-album.json  guitar.json  hdmi-port.json  landmark.json  line-squiggle.json  line-style.json  list-checks.json  list-collapse.json  list-sort-ascending.json  log-in.json  log-out.json  mail-check.json  shield-cog.json  shield-ellipsis.json  toolbox.json  tv-minimal-play.json  vector-square.json  x.json  zodiac-libra.json
lib/proc-macro/src/: junk.rs  lib.rs  parse.rs  test.rs
lib/proc-macro/src/obf/: buf.rs  mod.rs  split_bytes.rs  str.rs
lib/proc-macro/src/obf/rt/: base.rs  buf.rs  bytes.rs  image.rs  mod.rs  s1.rs  str.rs
lib/src/: lib.rs  runtime.rs
lib/src/data/: mod.rs
lib/src/data_process/: aead.rs  compress.rs  hash.rs  mod.rs
lib/src/sandbox/: env.rs  fs.rs  mod.rs
lib/src/sandbox/emulator/: wine.rs
lib/src/sandbox/general/: general_debgger.rs  hostname.rs  mod.rs  username.rs  windows_abnormal.rs  windows_debugger.rs  windows_media_foundation.rs
lib/src/sandbox/sandbox/: mod.rs  threatbook.rs
lib/src/sandbox/utils/: env.rs  fs.rs
lib/src/sandbox/virtual_machine/: mod.rs  virtual_box.rs  virtual_box_win.rs
lib/src/server_db/: mod.rs
lib/src/shell/: mod.rs  ppty.rs  pty.rs  shell.rs
lib/src/transport/: mod.rs
lib/src/utils/: awk.rs  mod.rs  tlsh.rs  win.rs
lib/src/utils/sys/: fingerprint.rs  info.rs  mod.rs  win.rs
sliver_implant/win1/: Cargo.toml
sliver_implant/win1/src/: main.rs
