[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
obfstr = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }

regex = { version = "1.12", optional = true}
portable-pty = { version = "0.9", optional = true}
serde = { version = "1.0.228", features = ["derive"] }



[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Threading", "Win32_Foundation"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"



[features]
default = [
    "ppty",
    "sandbox",
]
ppty = [
    "dep:regex",
    "tokio/process",
    "tokio/io-util",
    "tokio/sync",
]
pty = [
    "dep:portable-pty"
]
sandbox = [
    "tokio/fs",
]


[profile.release]
strip = "symbols"
debug = 0
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"