#lib/Cargo.toml
[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
libpm = { path = "proc-macro", default-features = false }
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util", "sync"] }
rand = "0.10.2"

regex = { version = "1.12", optional = true}
portable-pty = { version = "0.9", optional = true}
serde = { version = "1.0.228", features = ["derive"] }
tlsh2 = { version = "1.1.0", optional = true, features = ["diff","fast"] }

image = { version = "0.25.10", default-features = false, features = ["png","bmp","jpeg"], optional = true }
futures-core = { version = "0.3.32", optional = true}
async-stream = { version = "0.3.6", optional = true}
tokio-stream = { version = "0.1.18", optional = true}

aes-gcm = { version = "0.10", optional = true}
aes-gcm-siv = { version = "0.11", optional = true}
chacha20poly1305 = { version = "0.10", optional = true }

lz4_flex    = { version = "0.13.1", optional = true}
flate2      = { version = "1.1.9", optional = true}
zstd        = { version = "0.13.3", optional = true}



include = { path = "proc-macro/include" }

sqlx = { version = "0.9", optional = true,features = ["sqlite", "postgres", "json"] }



[target.'cfg(unix)'.dependencies]
libc = "0.2"



[features]
default = [
    "shell",
    "sandbox",
    "macros",
    "data-process",
    "server-db"
]
shell = [
    "dep:regex",
]
pty = [
    "dep:portable-pty"
]
sandbox = [
    "tokio/fs",
    "dep:tlsh2",
    "dep:image",
    "dep:regex"
]
macros = [
    "macros-junk",
    "macros-s1",
    "macros-s2",
    "macros-buf"
]
macros-junk = ["libpm/junk"]
macros-s1 = ["libpm/s1"]
macros-s2 = ["libpm/s2", "macros-buf"]
macros-buf = [
    "libpm/buf",
    "dep:image",
    "dep:futures-core",
    "dep:async-stream",
    "dep:tokio-stream"
]
data-process = [
    "dep:aes-gcm",
    "dep:aes-gcm-siv",
    "dep:chacha20poly1305",
    "dep:lz4_flex",
    "dep:flate2",
    "dep:zstd"
]

server-db = [
    "dep:sqlx"
]


[profile.release]
strip = "symbols"
debug = 0
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"